flux/apps/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: podinfo
  annotations:
    # Public ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    # AWS resource tags for ALBs
    alb.ingress.kubernetes.io/tags: "Environment=dev, Provisioner=k8s-ctrl"
    # HTTPS-only
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'

    # Required: DNS record for load balancer in Route 53
    external-dns.alpha.kubernetes.io/hostname: podinfo.amc-dev.stuartellis.org
    # Required: Name of ALB
    alb.ingress.kubernetes.io/load-balancer-name: podinfo-dev-default
    # Required: Network subnets for the load balancers
    alb.ingress.kubernetes.io/subnets: subnet-07b4d67d, subnet-5ac87816, subnet-eca28485
    # Required: TLS certificate in ACM
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:333594256635:certificate/19a36065-0c93-4798-aad6-22fb55286ffd
